--- a/app/src/main/res/layout/list_item_conference.xml
+++ b/app/src/main/res/layout/list_item_conference.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_below="@id/toolbar"
+    >
 
     <TextView
         android:id="@+id/conference_list_item_title"
@@ -9,6 +11,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
+        android:paddingTop="30dp"
         android:textStyle="bold"
         android:text="Conference title"/>
 
