--- a/app/src/main/res/layout/fragment_conference_grid.xml
+++ b/app/src/main/res/layout/fragment_conference_grid.xml
@@ -3,7 +3,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="com.codegram.conferences.fullstackfest.ConferenceListFragment">
+             tools:context="com.codegram.talks.fullstackfest.ConferenceListFragment">
 
     <GridView
         android:id="@android:id/list"
