--- a/app/src/main/res/layout/list_item_talk.xml
+++ b/app/src/main/res/layout/list_item_talk.xml
@@ -2,17 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@id/toolbar"
+
     >
 
     <TextView
-        android:id="@+id/conference_list_item_title"
+        android:id="@+id/talk_list_item_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
         android:paddingTop="30dp"
         android:textStyle="bold"
-        android:text="Conference title"/>
+        android:text="Talk title"/>
 
 </RelativeLayout>
