--- a/app/src/main/res/menu/menu_single.xml
+++ b/app/src/main/res/menu/menu_single.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context="com.codegram.conferences.fullstackfest.SingleFragmentActivity">
+      tools:context="com.codegram.talks.fullstackfest.SingleFragmentActivity">
     <item android:id="@+id/action_settings"
           android:title="@string/action_settings"
           android:orderInCategory="100"
