Prettify lists following Material design specs
http://www.google.com/design/spec/components/lists.html#lists-specs

--- a/app/src/main/res/layout/fragment_conference_list.xml
+++ b/app/src/main/res/layout/fragment_conference_list.xml
@@ -2,7 +2,9 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="com.codegram.marc.criminalintent.CrimeListFragment">
+             tools:context="com.codegram.marc.criminalintent.CrimeListFragment"
+             android:paddingTop="8dp"
+             android:paddingBottom="8dp">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
