--- a/app/src/main/res/layout/list_item_talk.xml
+++ b/app/src/main/res/layout/list_item_talk.xml
@@ -1,18 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-
-    >
+                android:layout_height="88dp" >
 
     <TextView
-        android:id="@+id/talk_list_item_title"
+        android:id="@+id/talk_list_item_primary"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingStart="72dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="20dp"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:textSize="16sp"
+        android:text="Primary text"/>
+    <TextView
+        android:id="@+id/talk_list_item_secondary_1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="4dp"
-        android:paddingRight="4dp"
-        android:paddingTop="30dp"
-        android:textStyle="bold"
-        android:text="Talk title"/>
+        android:layout_below="@id/talk_list_item_primary"
+        android:textSize="14sp"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:paddingStart="72dp"
+        android:paddingEnd="16dp"
+        android:text="Secondary 1 text"/>
+    <TextView
+        android:id="@+id/talk_list_item_secondary_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/talk_list_item_secondary_1"
+        android:textSize="14sp"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:paddingStart="72dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="20dp"
+        android:text="Secondary 2 text"/>
 
 </RelativeLayout>
