--- a/app/src/main/res/layout/list_item_talk.xml
+++ b/app/src/main/res/layout/list_item_talk.xml
@@ -3,13 +3,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="88dp" >
 
+    <com.makeramen.RoundedImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/talk_list_item_avatar"
+        android:paddingStart="16dp"
+        android:paddingTop="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
     <TextView
         android:id="@+id/talk_list_item_primary"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingStart="72dp"
         android:paddingEnd="16dp"
-        android:paddingTop="20dp"
+        android:paddingTop="16dp"
         android:ellipsize="end"
         android:singleLine="true"
         android:textSize="16sp"
@@ -34,7 +42,7 @@
         android:ellipsize="end"
         android:singleLine="true"
         android:paddingStart="72dp"
-        android:paddingEnd="16dp"
+        android:paddingEnd="20dp"
         android:paddingBottom="20dp"
         android:text="Secondary 2 text"/>
 
