--- a/app/src/main/res/layout/list_item_talk.xml
+++ b/app/src/main/res/layout/list_item_talk.xml
@@ -7,9 +7,9 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/talk_list_item_avatar"
         android:paddingStart="16dp"
-        android:paddingTop="16dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:paddingTop="20dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"/>
 
     <TextView
         android:id="@+id/talk_list_item_primary"
