--- a/app/src/main/res/layout/fragment_conference_list.xml
+++ b/app/src/main/res/layout/fragment_conference_list.xml
@@ -7,9 +7,12 @@
              android:paddingBottom="8dp">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"/>
+        android:text="@string/hello_blank_fragment"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:divider="@null"/>
 
 </FrameLayout>
