--- a/app/src/main/res/layout/list_item_talk.xml
+++ b/app/src/main/res/layout/list_item_talk.xml
@@ -21,6 +21,7 @@
         android:ellipsize="end"
         android:singleLine="true"
         android:textSize="16sp"
+        android:textStyle="bold"
         android:text="Primary text"/>
     <TextView
         android:id="@+id/talk_list_item_secondary_1"
@@ -45,5 +46,11 @@
         android:paddingEnd="20dp"
         android:paddingBottom="20dp"
         android:text="Secondary 2 text"/>
+
+    <View xmlns:android="http://schemas.android.com/apk/res/android"
+          android:layout_width="match_parent"
+          android:layout_height="1px"
+          android:layout_marginStart="72dp"
+          android:background="?android:attr/listDivider" />
 
 </RelativeLayout>
