--- a/app/src/main/res/layout/list_item_speaker.xml
+++ b/app/src/main/res/layout/list_item_speaker.xml
@@ -1,18 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="56dp" >
 
-    >
+    <com.makeramen.RoundedImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/speaker_list_item_avatar"
+        android:paddingStart="16dp"
+        android:paddingTop="6dp"
+        android:layout_width="62dp"
+        android:layout_height="60dp"/>
 
     <TextView
-        android:id="@+id/speaker_list_item_name"
+        android:id="@+id/speaker_list_item_primary"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="4dp"
-        android:paddingRight="4dp"
-        android:paddingTop="30dp"
+        android:layout_height="match_parent"
+        android:paddingStart="72dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="24dp"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:textSize="16sp"
         android:textStyle="bold"
-        android:text="Talk title"/>
+        android:text="Primary text"/>
+
+    <View xmlns:android="http://schemas.android.com/apk/res/android"
+          android:layout_width="match_parent"
+          android:layout_height="1px"
+          android:layout_marginStart="0dp"
+          android:background="?android:attr/listDivider" />
 
 </RelativeLayout>
