--- a/app/src/main/res/layout/fragment_talk.xml
+++ b/app/src/main/res/layout/fragment_talk.xml
@@ -13,7 +13,8 @@
             android:id="@+id/talk_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/hello_blank_fragment" />
+            android:text="@string/hello_blank_fragment"
+            android:transitionName="@string/transition_talk_name"/>
 
         <TextView
             android:id="@+id/speaker_name"
