--- a/app/src/main/res/layout/fragment_talk.xml
+++ b/app/src/main/res/layout/fragment_talk.xml
@@ -1,7 +1,7 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context="com.codegram.conferences.fullstackfest.TalkFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -9,19 +9,102 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/talk_title"
+        <ImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/talk_avatar"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"/>
+        <LinearLayout
+            android:id="@+id/talk_title_data"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/hello_blank_fragment"
-            android:transitionName="@string/transition_talk_name"/>
+            android:background="#FFC107">
+            <TextView
+                android:id="@+id/talk_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="72dp"
+                android:paddingEnd="16dp"
+                android:paddingTop="20dp"
+                android:text="@string/hello_blank_fragment"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:transitionName="@string/transition_talk_name"/>
+            <TextView
+                android:id="@+id/talk_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="72dp"
+                android:paddingEnd="16dp"
+                android:paddingBottom="16dp"
+                android:textSize="16sp"
+                android:text="DX, 10:00 - 11:00"/>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/talk_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            android:paddingStart="72dp"
+            android:paddingEnd="16dp"
+            android:text="@string/hello_blank_fragment" />
+
+        <View xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="1px"
+              android:layout_marginStart="72dp"
+              android:background="?android:attr/listDivider" />
+
+        <!-- speaker -->
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            android:paddingStart="72dp"
+            android:paddingEnd="16dp"
+            android:text="Speaker"
+            android:textSize="20sp"/>
 
         <TextView
             android:id="@+id/speaker_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingStart="72dp"
+            android:paddingEnd="16dp"
             android:text="@string/hello_blank_fragment" />
+
+        <TextView
+            android:id="@+id/speaker_bio"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="16dp"
+            android:paddingStart="72dp"
+            android:paddingEnd="16dp"
+            android:text="@string/hello_blank_fragment" />
+
+        <View xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="1px"
+              android:layout_marginStart="72dp"
+              android:background="?android:attr/listDivider" />
+
+        <!-- more -->
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            android:paddingStart="72dp"
+            android:paddingEnd="16dp"
+            android:text="More"
+            android:textSize="20sp"/>
 
     </LinearLayout>
 
-</FrameLayout>
+</ScrollView>
