Reuse list separator views

--- a/app/src/main/res/layout/list_item_speaker.xml
+++ b/app/src/main/res/layout/list_item_speaker.xml
@@ -25,10 +25,6 @@
         android:textStyle="bold"
         android:text="Primary text"/>
 
-    <View xmlns:android="http://schemas.android.com/apk/res/android"
-          android:layout_width="match_parent"
-          android:layout_height="1px"
-          android:layout_marginStart="0dp"
-          android:background="?android:attr/listDivider" />
+    <include layout="@layout/separator" />
 
 </RelativeLayout>
