--- a/app/src/main/res/layout/fragment_talk.xml
+++ b/app/src/main/res/layout/fragment_talk.xml
@@ -52,11 +52,7 @@
             android:paddingEnd="16dp"
             android:text="@string/hello_blank_fragment" />
 
-        <View xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="1px"
-              android:layout_marginStart="72dp"
-              android:background="?android:attr/listDivider" />
+        <include layout="@layout/separator" />
 
         <!-- speaker -->
 
@@ -87,11 +83,7 @@
             android:paddingEnd="16dp"
             android:text="@string/hello_blank_fragment" />
 
-        <View xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="1px"
-              android:layout_marginStart="72dp"
-              android:background="?android:attr/listDivider" />
+        <include layout="@layout/separator" />
 
         <!-- more -->
 
