--- a/app/src/main/res/layout/list_item_talk.xml
+++ b/app/src/main/res/layout/list_item_talk.xml
@@ -48,10 +48,6 @@
         android:paddingBottom="20dp"
         android:text="Secondary 2 text"/>
 
-    <View xmlns:android="http://schemas.android.com/apk/res/android"
-          android:layout_width="match_parent"
-          android:layout_height="1px"
-          android:layout_marginStart="72dp"
-          android:background="?android:attr/listDivider" />
+    <include layout="@layout/separator" />
 
 </RelativeLayout>
