Add sticky header
View is cut at the bottom :(

--- a/app/src/main/res/layout/activity_single_fragment.xml
+++ b/app/src/main/res/layout/activity_single_fragment.xml
@@ -12,11 +12,18 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"/>
 
-    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/toolbar"
-        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        android:layout_height="?attr/actionBarSize"
+    <LinearLayout
+        android:id="@+id/header"
         android:layout_width="match_parent"
-        android:background="@android:color/transparent">
-    </android.support.v7.widget.Toolbar>
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/toolbar"
+            app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_width="match_parent"
+            android:background="@android:color/transparent">
+        </android.support.v7.widget.Toolbar>
+    </LinearLayout>
 </FrameLayout>
