--- a/app/src/main/res/layout/fragment_talk.xml
+++ b/app/src/main/res/layout/fragment_talk.xml
@@ -15,7 +15,8 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/talk_avatar"
             android:layout_width="match_parent"
-            android:layout_height="200dp"/>
+            android:layout_height="200dp"
+            />
 
         <LinearLayout
             android:id="@+id/talk_header"
@@ -38,7 +39,7 @@
                     android:text="@string/hello_blank_fragment"
                     android:textStyle="bold"
                     android:textSize="16sp"
-                    android:transitionName="@string/transition_talk_name"/>
+                    />
                 <TextView
                     android:id="@+id/talk_time"
                     android:layout_width="match_parent"
