--- a/app/src/main/res/layout/list_item_talk.xml
+++ b/app/src/main/res/layout/list_item_talk.xml
@@ -9,7 +9,8 @@
         android:paddingStart="16dp"
         android:paddingTop="20dp"
         android:layout_width="60dp"
-        android:layout_height="60dp"/>
+        android:layout_height="60dp"
+        />
 
     <TextView
         android:id="@+id/talk_list_item_primary"
@@ -23,7 +24,7 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:text="Primary text"
-        android:transitionName="@string/transition_talk_name"/>
+        />
     <TextView
         android:id="@+id/talk_list_item_secondary_1"
         android:layout_width="wrap_content"
