Use basic theme for TalkActivity

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,8 @@
         <item name="drawerType">@integer/DRAWERTYPE_IMAGE</item>
     </style>
 
+    <style name="FullStackFest2" parent="@style/Theme.AppCompat.Light">
+        <item name="windowActionBar">false</item>
+    </style>
+
 </resources>
