--- a/app/src/main/res/layout/fragment_conference_list.xml
+++ b/app/src/main/res/layout/fragment_conference_list.xml
@@ -8,6 +8,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <ListView
+        android:id="@+id/fragment_conference_list_id"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment"
