--- a/app/src/main/res/layout/fragment_talk_tabs.xml
+++ b/app/src/main/res/layout/fragment_talk_tabs.xml
@@ -19,6 +19,7 @@
         android:background="@android:color/white">
 
         <ListView
+            android:id="@+id/viewpager_listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingTop="8dp"
