--- a/app/src/main/res/layout/list_item_talk.xml
+++ b/app/src/main/res/layout/list_item_talk.xml
@@ -15,19 +15,18 @@
     <TextView
         android:id="@+id/talk_list_item_primary"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingStart="72dp"
+        android:layout_height="wrap_content"
         android:paddingEnd="16dp"
         android:paddingTop="16dp"
+        android:paddingStart="72dp"
         android:ellipsize="end"
         android:singleLine="true"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:text="Primary text"
-        />
+        android:text="Primary text"/>
     <TextView
         android:id="@+id/talk_list_item_secondary_1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/talk_list_item_primary"
         android:textSize="14sp"
@@ -38,7 +37,7 @@
         android:text="Secondary 1 text"/>
     <TextView
         android:id="@+id/talk_list_item_secondary_2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/talk_list_item_secondary_1"
         android:textSize="14sp"
@@ -46,9 +45,10 @@
         android:singleLine="true"
         android:paddingStart="72dp"
         android:paddingEnd="20dp"
-        android:paddingBottom="20dp"
+        android:paddingBottom="10dp"
         android:text="Secondary 2 text"/>
 
-    <include layout="@layout/separator" />
+    <include layout="@layout/separator"
+             android:id="@+id/include"/>
 
 </RelativeLayout>
