--- a/app/src/main/res/menu/menu_talks_list.xml
+++ b/app/src/main/res/menu/menu_talks_list.xml
@@ -2,8 +2,7 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.codegram.conferences.fullstackfest.ListActivity">
-    <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
-          android:orderInCategory="100"
+    <item android:id="@+id/action_refresh"
+          android:title="Refresh"
           app:showAsAction="never"/>
 </menu>
