Add background to talk details
This way image is hidden when scrolling

--- a/app/src/main/res/layout/fragment_talk.xml
+++ b/app/src/main/res/layout/fragment_talk.xml
@@ -56,7 +56,9 @@
             android:id="@+id/talk_details_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="#fff"
+            >
 
             <TextView
                 android:id="@+id/talk_description"
