--- a/app/src/main/res/layout/activity_talk.xml
+++ b/app/src/main/res/layout/activity_talk.xml
@@ -18,6 +18,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <View
+            android:id="@+id/statusbar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/statusbar_height"
+            />
+
         <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
                                            android:id="@+id/toolbar"
                                            app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
