--- a/app/src/main/res/layout/activity_talk.xml
+++ b/app/src/main/res/layout/activity_talk.xml
@@ -9,7 +9,8 @@
     <LinearLayout
         android:id="@+id/frame_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:background="#ffffff"
         android:orientation="vertical"/>
 
     <LinearLayout
@@ -17,12 +18,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <View
-            android:id="@+id/statusbar"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/statusbar_height"
-            />
 
         <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
                                            android:id="@+id/toolbar"
