--- a/app/src/main/res/layout/fragment_talk.xml
+++ b/app/src/main/res/layout/fragment_talk.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/talk_scroll"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context="com.codegram.conferences.fullstackfest.TalkFragment">
+    android:layout_height="match_parent"
+    android:background="#ffffff"
+    tools:context="com.codegram.conferences.fullstackfest.TalkFragment"
+    android:fillViewport="false">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
