--- a/app/src/main/res/layout-sw600dp-land/fragment_talk.xml
+++ b/app/src/main/res/layout-sw600dp-land/fragment_talk.xml
@@ -2,6 +2,7 @@
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:layout_weight="1"
     >
     <RelativeLayout
         android:id="@+id/sidebar"
@@ -11,7 +12,6 @@
         android:layout_gravity="center"
         >
         <ImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/talk_avatar"
             android:layout_width="match_parent"
             android:layout_height="200dp"
