--- a/app/src/main/res/layout/fragment_talk.xml
+++ b/app/src/main/res/layout/fragment_talk.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <ImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/talk_avatar"
