--- a/app/src/main/res/layout-sw600dp-land/fragment_talk.xml
+++ b/app/src/main/res/layout-sw600dp-land/fragment_talk.xml
@@ -15,6 +15,8 @@
             android:id="@+id/talk_avatar"
             android:layout_width="match_parent"
             android:layout_height="200dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true"
             />
         <TextView
             android:id="@+id/speaker_name"
@@ -24,6 +26,7 @@
             android:paddingEnd="16dp"
             android:textStyle="bold"
             android:text="@string/hello_blank_fragment"
+            android:textSize="20sp"
             android:layout_below="@id/talk_avatar"
             />
     </RelativeLayout>
@@ -37,6 +40,58 @@
         tools:context="com.codegram.conferences.fullstackfest.TalkFragment"
         android:fillViewport="false"
         >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"
+                android:paddingStart="72dp"
+                android:paddingEnd="16dp"
+                android:text="Talk Description"
+                android:textSize="20sp"
+                />
+
+            <TextView
+                android:id="@+id/talk_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"
+                android:paddingStart="72dp"
+                android:paddingEnd="16dp"
+                android:autoLink="web"
+                android:linksClickable="true"
+                android:text="@string/hello_blank_fragment"
+                />
+
+            <include layout="@layout/separator" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"
+                android:paddingStart="72dp"
+                android:paddingEnd="16dp"
+                android:text="Speaker"
+                android:textSize="20sp"
+                />
+
+            <TextView
+                android:id="@+id/speaker_bio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="16dp"
+                android:paddingStart="72dp"
+                android:paddingEnd="16dp"
+                android:text="@string/hello_blank_fragment"
+                />
+        </LinearLayout>
     </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>
 </LinearLayout>
