--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="maps_api_key">android</string>
     <string name="crashlytics_api_key">android</string>
+    <string name="parse_app_id">android</string>
+    <string name="parse_client_key">android</string>
 </resources>
